# agent-swarm-protocol

./: .dockerignore  .env.example  .gitignore  AGENT-INSTRUCTIONS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  LICENSE  PLAN.md  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.claude/agents/: a2a-handler.md
.github/ISSUE_TEMPLATE/: bug.md  rfc.md  task.md
contrib/github-monitor/: PROTOCOL.md  README.md  config.yaml  monitor.py
docker/angie/: Dockerfile  angie.conf  angie.dev.conf  docker-entrypoint.sh
docs/: API.md  CLAUDE-INTEGRATION.md  CLI.md  DOCKER.md  ENVIRONMENT.md  HOST-DEPLOYMENT.md  INVITE-TOKENS.md  OPERATIONS.md  PROTOCOL.md  SERVER-SETUP.md  fleet-api-executor-design.md  message-format-v2.md
docs/api/: endpoint-health.md  endpoint-info.md  endpoint-join.md  endpoint-message.md  endpoint-wake.md  headers-errors.md
schemas/: invite-token.json  membership-state.json  message.json
schemas/openapi/: openapi.yaml
schemas/operations/: create.json  invite.json  join.json  kick.json  leave.json  transfer.json
schemas/types/: error.json  member.json  public-key-entry.json  swarm-membership.json  swarm-settings.json
scripts/: bootstrap.sh  deploy.sh
src/: __init__.py
src/claude/: __init__.py  context_loader.py  notification_preferences.py  response_handler.py  session_manager.py  wake_trigger.py
src/cli/: __init__.py  main.py
src/client/: __init__.py  _constants.py  builder.py  client.py  crypto.py  exceptions.py  message.py  messaging.py  operations.py  persist.py  tokens.py  transport.py  types.py
tests/: __init__.py  conftest.py  test_event_notifications.py  test_inbox_api.py  test_integrity.py  test_invoke_sdk.py  test_invoke_tmux.py  test_master_broadcast.py  test_message_persistence.py  test_receiver_member_sync.py  test_server.py  test_wake_endpoint.py  test_wake_trigger_wiring.py
(+134 files in other folders)
